// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account menu - Log out button renders renders when auth type is MultiAuth: basicauth 1`] = `
<div>
  <EuiButtonEmpty
    color="danger"
    data-test-subj="log-out-3"
    onClick={[Function]}
    size="xs"
  >
    Log out
  </EuiButtonEmpty>
</div>
`;

exports[`Account menu - Log out button renders renders when auth type is MultiAuth: openid 1`] = `
<div>
  <EuiButtonEmpty
    color="danger"
    data-test-subj="log-out-2"
    onClick={[Function]}
    size="xs"
  >
    Log out
  </EuiButtonEmpty>
</div>
`;

exports[`Account menu - Log out button renders renders when auth type is MultiAuth: saml 1`] = `
<div>
  <EuiButtonEmpty
    color="danger"
    data-test-subj="log-out-1"
    onClick={[Function]}
    size="xs"
  >
    Log out
  </EuiButtonEmpty>
</div>
`;

exports[`Account menu - Log out button renders renders when auth type is OpenId 1`] = `
<div>
  <EuiButtonEmpty
    color="danger"
    data-test-subj="log-out-2"
    onClick={[Function]}
    size="xs"
  >
    Log out
  </EuiButtonEmpty>
</div>
`;

exports[`Account menu - Log out button renders renders when auth type is Proxy 1`] = `<div />`;

exports[`Account menu - Log out button renders renders when auth type is SAML 1`] = `
<div>
  <EuiButtonEmpty
    color="danger"
    data-test-subj="log-out-1"
    onClick={[Function]}
    size="xs"
  >
    Log out
  </EuiButtonEmpty>
</div>
`;

exports[`Account menu - Log out button renders renders when auth type is not OpenId, SAML, or Proxy 1`] = `
<div>
  <EuiButtonEmpty
    color="danger"
    data-test-subj="log-out-3"
    onClick={[Function]}
    size="xs"
  >
    Log out
  </EuiButtonEmpty>
</div>
`;
